syntax = "proto3";

package protocol;

option go_package = "github.com/rudransh-shrivastava/open-sync/open-sync/pkg/protocol";

message Packet {
  oneof payload {
    Metadata metadata = 1;
    Chunk chunk = 2;
    Ack ack = 3;
    RequestMissing request_missing = 4;
  }
}

message Metadata {
  string file_name = 1;
  int64 file_size = 2;
  int64 total_chunks = 3;
}

message Chunk {
  int64 sequence_number = 1;
  bytes data = 2;
}

message Ack {
  int64 sequence_number = 1;
}

message RequestMissing {
  repeated int64 sequence_numbers = 1;
}